--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -113,15 +113,15 @@ header ul {
   padding:0;
   
   background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+  background: -moz-linear-gradient(top, #f8f8f8 0%, #2f89cc 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#2f89cc));
+  background: -webkit-linear-gradient(top, #f8f8f8 0%,#2f89cc 100%);
+  background: -o-linear-gradient(top, #f8f8f8 0%,#2f89cc 100%);
+  background: -ms-linear-gradient(top, #f8f8f8 0%,#2f89cc 100%);
+  background: linear-gradient(top, #f8f8f8 0%,#2f89cc 100%);
   
   border-radius:5px;
-  border:1px solid #d2d2d2;
+  border:1px solid #2f89cc;
   box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
   width:270px;
 }
@@ -129,14 +129,14 @@ header ul {
 header li {
   width:89px;
   float:left;
-  border-right:1px solid #d2d2d2;
+  border-right:1px solid #2f89cc;
   height:40px;
 }
 
 header ul a {
   line-height:1;
   font-size:11px;
-  color:#999;
+  color:#39c;
   display:block;
   text-align:center;
   padding-top:6px;
@@ -144,7 +144,7 @@ header ul a {
 }
 
 strong {
-  color:#222;
+  color:#2f89cc;
   font-weight:700;
 }
 
